Correcting bug with icon alignment inside anchor buttons. Changing default window object for position function to avoid error loop.

--- a/css/jqface.less
+++ b/css/jqface.less
@@ -86,21 +86,17 @@
   zoom:1;
 }
 .jqf-input {
-  @height: 30px;
   .jqf-border;
   .jqf-font;
   .jqf-gradient-outset;
   .jqf-inline-block;
-  appearance: none;
-  -webkit-appearance: none;
   background-color: @background-color;
   border-color: @border-color;
   color: black;
   cursor: pointer;
-  height: @height;
-  line-height: @height;
+  line-height: 16px;
   overflow: visible;
-  padding: 0 10px;
+  padding: 5px 10px;
   text-align: center;
   text-decoration: none;
   text-shadow: white 0 1px 1px;
@@ -406,6 +402,7 @@
   .jqf-inline-block;
   background-image:url('../images/icons.png');
   height: @size;
+  line-height: 1;
   overflow:hidden;
   vertical-align:middle;
 	width: @size;
